fix font align

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,22 +2,20 @@ html {
   font-family: verdana;
   background-color: black;
   color: white;
+  text-align: center;
 }
 
 h1 {
   font-size: 50px;
   font-weight: normal;
-  text-align: center;
 }
 
 h3 {
   color: aquamarine;
   font-size: 16px;
-  text-align: center;
 }
 
 p {
-  text-align: center;
   font-size: 21px;
   color: gray;
 }
